--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,19 @@
- ======================= Django configurations ====================
+# ======================= Django configurations ====================
 SECRET_KEY=your_django_secret_key
-
+# ======================= Django SMTP ===========================
 EMAIL_HOST_USER=your_email_host_user
 DEFAULT_FROM_EMAIL=your____
 EMAIL_HOST_PASSWORD=your_host_password
 EMAIL_HOST=your_email_host
+
+# ======================== Django Database =================
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.postgresql',
+        'NAME': 'database_name',
+        'USER': 'database.user',
+        'PASSWORD': 'database_password',
+        'HOST': 'localhost',
+        'PORT': 5432
+    }
+}
